--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,12 @@
 [project]
 name = "PcapParser"
 version = "0.1.0"
-description = "Default template for PDM package"
-authors = [
-    {name = "poly000", email = "1348292515a@gmail.com"},
-]
-dependencies = [
-    "dpkt>=1.9.8",
-]
+description = "Extract rtmp links from pcap file"
+authors = [{ name = "mokurin000", email = "1348292515a@gmail.com" }]
+dependencies = ["dpkt>=1.9.8"]
 requires-python = ">=3.12"
 readme = "README.md"
-license = {text = "MIT"}
+license = { text = "MIT" }
 
 [build-system]
 requires = ["setuptools>=61", "wheel"]
@@ -19,3 +15,6 @@ build-backend = "setuptools.build_meta"
 
 [tool.pdm]
 distribution = true
+
+[project.scripts]
+pcap-parser = "pcapparser.__main__:main"
