--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = "PcapParser"
-version = "0.1.1"
+version = "0.1.2"
 description = "Extract rtmp links from pcap file"
 authors = [{ name = "mokurin000", email = "1348292515a@gmail.com" }]
 dependencies = ["dpkt>=1.9.8"]
 requires-python = ">=3.12"
 readme = "README.md"
 license = { text = "MIT" }
+urls = ["https://github.com/mokurin000/PcapParser"]
 
 [build-system]
 requires = ["setuptools>=61", "wheel"]
